# qscript

./: .gitignore  LICENSE  README.md
xtcc/qscript/: Makefile  Makefile.am  Makefile.in  README  configure  configure.ac  const_defs.h  inp1  inp3_1  lex.c  lex.l  named_attributes.h  named_range.h  q_expr.h  qscript-part.y  qscript.c  qscript.h  qscript.y  question.C  stmt.C
xtcc/qscript/stubs/: jpl-process-and-error-detection.txt  my-reg-func.c  my-reg-func.cpp  putenv.C  undo_redo3.C
xtcc/qscript/stubs/SIMPLE~1/: CustomQScriptMakefile.Win32
xtcc/qscript/stubs/boost/: split_into_words.cpp
xtcc/qscript/stubs/cleanup-runtime/: .gitignore  AbstractQuestionnaire.cpp  AbstractQuestionnaire.h  AbstractStatement.cpp  ArrayQuestion.h  AsciiFlatFileQuestionDiskMap.h  EmScriptenMakefile  Makefile.dojo  Makefile.dojo-mobile  Makefile.simple  README.txt  RuntimeMakefile  XtccDataFile.h  base_text.h  config_parser.h  data_entry.cpp  data_entry.hpp  display_data.h  dont-need-AbstractStatement.h  dont-need-TempNameGenerator.h  dont-need-expr.h  dont-need-qscript_parser.h  dont-need-scope.h  dont-need-symtab.h  err  expr.h  input_from_dom.cpp  interactive_hello.cpp  interactive_hello2.cpp  interactive_hello3.cpp  interactive_hello4.cpp  lex_location.h  main_call_function.cpp  main_loop.cpp  makefile.input_from_dom  makefile.main_call_function  named_attributes.cpp  named_attributes.h  named_range.cpp  named_range.h  (+32 more)
xtcc/qscript/stubs/coding-assistant/: .gitignore  Makefile  gram.c  gram.h  gram.y  multi_index_person.cpp  person_info.h  read_data.c  read_sentiment.cpp  util.cpp  util.h
xtcc/qscript/stubs/compiler-ui/: Makefile  Makefile.Win  flex_grid_sizer.cpp  qscript_compiler_ui.cpp  wx_flags  wx_ld_flags
xtcc/qscript/stubs/data-file-standard/: Makefile  sample_file_format.C  sample_job.xtdat  try1.C
xtcc/qscript/stubs/embedded-jquery/: Makefile  embed_jquery.cpp  jquery-example.html  load_jquery.js
xtcc/qscript/stubs/expr_oper_in/: Makefile  exp_op.C  expr.C  expr.h  expr.tab.c  expr.tab.h  expr.y  inp1  lex.l  lex.yy.c  op  range_set.h  stmt.C  stmt.h  symtab.h  xtcc_set.C  xtcc_set.h
xtcc/qscript/stubs/lex_from_string/: data_entry.tab.c  data_entry.y  lex.scan_data.c  try1.l
xtcc/qscript/stubs/lex_periments/: simple_lex.c  simple_lex.l  simple_lex_inp
xtcc/qscript/stubs/phonegap_experiments/: .project  AndroidManifest.xml  build.xml
xtcc/qscript/stubs/qscript_android_phonegap_app/: .project  build.xml
xtcc/qscript/stubs/questionnaire-designer/: Makefile  questionnaire_design_ui.cpp
xtcc/qscript/stubs/randomize/: Makefile  Makefile.v2  err  lex.l  lex.yy.c  m1  new_named_range-v2.cpp  new_named_range-v2.h  new_named_range.cpp  new_named_range.cpp1  op  op1  ptr_test.cpp  r1  random_data_order.output  random_data_order.tab.h  random_data_order.y  random_data_order.y1  random_test3.input  random_test4.input  randomize-v2.tab.c  randomize-v2.tab.h  randomize-v2.y  randomize.output  randomize.tab.c  randomize.tab.h  randomize.y  randomized_data_output_test2.input  randomized_data_output_test_old.input  simple_type_test.c  tags  test_main.cpp  test_randomization.cpp  test_randomization_1.cpp  test_structure.cpp  utils.cpp  utils.h
xtcc/qscript/stubs/read_data_file/: Makefile  README  lex.yy.c  qscript_data.l  qscript_data.tab.c  qscript_data.tab.h  qscript_data.y  question_disk_data.h
xtcc/qscript/stubs/really-fast-make/: Makefile  gram.c  gram.h  gram.y  inp  lex.l  lex.yy.c  lex_location.h
xtcc/qscript/stubs/simple_compiler/: .gitignore  CMakeLists.txt  CustomQScriptMakefile  CustomQScriptMakefile.Win32  CustomQScriptMakefile.mac  INSTALL  INSTALL_CUSTOM.readme  Makefile  Makefile.am  Makefile.como  Makefile.in  Makefile.old  Makefile.sunstudio  Merge-code-web-questionnaire-and-web-questionnaire-2  QScriptMakefile  QScriptMakefile.como  QScriptMakefile1  README  WinMakefile  XtccGNUMakefile  bcpp.cfg  build.ninja  common.h  compiling-qscript-on-windows.txt  config.h  config.h.in  configure  configure.ac  const_defs.h  data_entry.c  data_entry.cpp  data_entry.h  data_entry.tab.c  data_entry.tab.h  data_entry.y  debug_mem.h  expr.C  expr.h  inp  inp1_err  (+63 more)
xtcc/qscript/stubs/simple_interpreter/: .q.y.swp  .stmt.C.swp  Makefile  common.h  data_entry.tab.h  data_entry.y  inp  lex.l  lex.scan_data.c  lex.yy.c  q.tab.c  q.tab.h  q.y  simple_interpreter  stmt.C  stmt.h  try1.l  xtcc_set.C  xtcc_set.h
xtcc/qscript/stubs/table-checker/: Makefile  Makefile.Win32  TableInfo.h  freq_file.c  freq_file.h  freq_file.y  lex.l  lex.yy.c  lex_tab.c  lex_tab.h  lex_tab.l  main.cpp  read-freq-count-output.cpp  table_csv.c  table_csv.h  table_csv.y  utils.h
xtcc/qscript/stubs/test-emscripten-return-vector/: test-return-vector.cpp
xtcc/qscript/stubs/test_phone_gap_app/: local.properties
xtcc/qscript/stubs/test_phone_gap_app2/: .project  AndroidManifest.xml  build.xml
xtcc/qscript/trunk/: AUTHORS  Makefile  Makefile.am  Makefile.in  Tab.h  expr.C  expr.h  goals-objectives.txt  inp1  lex.c  lex.l  q_expr.h  qscript.c  qscript.y  question.h  range_set.h  scope.C  scope.h  stmt.C  stmt.h  symtab.C  symtab.h  tree.C  tree.h  utils.C  utils.h
xtcc/xtcc/trunk/: .gitignore  AUTHORS  COPYING  ChangeLog  Custom.make  CustomGtkXtccMakefile  CustomWtXtccMakefile  CustomXtccMakefile  CustomXtccMakefile.Win32  INSTALL  MY_DEV_STATUS  Makefile  Makefile.am  Makefile.am.deprecated  Makefile.borland  Makefile.in  Makefile.manual  Makefile.unix  Makefile2  README  RELEASE-NOTES  Tab.C  Tab.h  config.h.in  config.status  configure  configure.ac  configure.scan  datafile  debug_mem.C  debug_mem.h  expr.C  expr.h  expr.y.inc  expr_prec.y.inc  generate_code.C  gram.y  inp12  install-sh  lex.c  (+26 more)
xtcc/xtcc/trunk/docs/: COPYING  manual.aux  manual.cp  manual.cps  manual.dvi  manual.texi  manual.toc  op  xtcc_doc
xtcc/xtcc/trunk/latex/: sample_tex_files.sh  super_tabular.tex  table.tex  xtab.tex
xtcc/xtcc/trunk/src/: ChartConfig.C  ChartConfig.h  CsvUtil.C  CsvUtil.h  Tab.cpp  Tab.h  TreeViewExample.C  TreeViewExample.h  code_output_files.h  config.h  const_defs.h  expr.cpp  expr.h  gtk_main.cpp  (+26 more)
(+819 files in other folders)
