CC=$(CXX)
AM_CXXFLAGS= -g -Wall -frepo 
AM_YFLAGS= -d -v
bin_PROGRAMS=qscript
qscript_SOURCES= const_defs.h ../xtcc/trunk/expr.C ../xtcc/trunk/expr.h lex.l qscript.y ../xtcc/trunk/symtab.C ../xtcc/trunk/symtab.h ../xtcc/trunk/tree.C ../xtcc/trunk/tree.h stmt.C ../xtcc/trunk/scope.C ../xtcc/trunk/scope.h  ../xtcc/trunk/utils.h ../xtcc/trunk/utils.C question.C
BUILT_SOURCES=qscript.c qscript.h lex.c

